--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/leekangtaqi/gflux/issues"
   },
-  "homepage": "https://github.com/leekangtaqi/gflux#readme"
+  "homepage": "https://github.com/leekangtaqi/gflux#readme",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0"
+  }
 }
